--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dask==0.18.2
 decorator==4.3.0
 entrypoints==0.2.3
 html5lib==1.0.1
+imageio==2.4.1
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -26,6 +27,7 @@ nbformat==4.4.0
 networkx==2.1
 notebook==5.6.0
 numpy==1.15.1
+opencv-python==3.4.3.18
 pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
